# TokaiOnAir-Video-Search

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: linter.yml  python-ci.yml  rails-cd.yml  rails-ci.yml
app/: .gitignore  Dockerfile  Gemfile  Makefile  README.md  entrypoint.sh
app/app/assets/stylesheets/: application.scss
app/app/controllers/: page_controller.rb
app/app/views/layouts/: application.html.erb
app/app/views/page/: _header.html.erb  _video.html.erb  index.html  index.html.erb
app/config/: credentials.yml.enc  database.yml
app/config/environments/: production.rb
app/db/: schema.rb
app/db/migrate/: 20231005045939_create_videos.rb
app/test/controllers/: page_controller_test.rb
app/test/fixtures/: videos.yml
job/: Dockerfile  Makefile  README.md  main.py  pyproject.toml  utils.py
job/tests/: test.py
